--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +8,11 @@
 
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+    <div id="colorContent"></div>
     <button>Tap to change!</button>
     <script src="app.js"></script>
 </body>
+
 </html>
